# Week8-medical-telegram-warehouse

./: .gitignore  README.md  docker-compose.yml  main.py  medical_scraper_session.session  pipeline.py  pyproject.toml  requirements.txt
api/: database.py  main.py  schemas.py
api/routers/: analytics.py
medical_warehouse/: .user.yml  dbt_project.yml  profiles.yml
medical_warehouse/models/: source.yml
medical_warehouse/models/marts/: dim_channels.sql  dim_dates.sql  fct_image_detections.sql  fct_messages.sql  schema.yml
medical_warehouse/models/staging/: stg_telegram_messages.sql
notebooks/: data_exploration.ipynb  warehouse_queries.ipynb  yolo_results_analysis.ipynb
src/: load_raw_to_pg.py  load_yolo_to_pg.py  scraper.py  yolo_detect.py
tests/: assert_no_future_messages.sql  assert_positive_views.sql
