[project]
name = "week8-medical-telegram-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.10",
    "dagster-webserver>=1.12.10",
    "dbt>=1.0.0.40.14",
    "dbt-core>=1.11.2",
    "dbt-postgres>=1.10.0",
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "telethon>=1.42.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "dbt-postgres>=1.10.0",
]
